# Texts

./: CMakeLists.txt
LabTest/: CMakeLists.txt  tests.cpp
Text/: CMakeLists.txt  Text.cpp  Text.h
TextNode/: CMakeLists.txt  TextNode.cpp  TextNode.h
